# decorator

./: .gitignore  .travis.yml  CHANGES.md  CHANGES.txt  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  PITCHME.md  README.md  README.old  README.rst  README.txt  commit_msg.txt  corner-cases.txt  decorator.py  documentation.html  documentation.py  documentation.rst  documentation3.html  documentation3.py  documentation3.rst  index.html  other.txt  performance.sh  pyproject.toml  setup.cfg  setup.py  test.py  util.py
.github/workflows/: python-package.yml
docs/: README.rst  conf.py  documentation.md  index.html  index.md  index.rst  tests.documentation.rst
src/: decorator.py
src/decorator/: __init__.py  __init__.pyi
src/tests/: documentation.py  test.py
tests/: documentation.py  test.py
